Creating intial app screens - Created Note List screen and Note screen; - Created a RecyclerView with a list of dummy data; - Create a Intent to send note by email;

--- a/java/app/src/main/res/values/strings.xml
+++ b/java/app/src/main/res/values/strings.xml
@@ -1,4 +1,18 @@
 <resources>
     <string name="app_name">Note Taking</string>
     <string name="action_settings">Settings</string>
+    <string name="action_email">Send as email</string>
+
+    <string-array name="test">
+        <item>Test 1</item>
+        <item>Test 2</item>
+        <item>Test 3</item>
+        <item>Test 4</item>
+        <item>Test 5</item>
+        <item>Test 6</item>
+        <item>Test 7</item>
+        <item>Test 8</item>
+        <item>Test 9</item>
+        <item>Test 10</item>
+    </string-array>
 </resources>
