--- a/java/app/src/main/res/values/strings.xml
+++ b/java/app/src/main/res/values/strings.xml
@@ -3,6 +3,11 @@
     <string name="action_settings">Settings</string>
     <string name="action_email">Send as email</string>
 
+    <!-- Email -->
+    <string name="email_title">[New Note]</string>
+    <string name="email_text">New note kept:</string>
+    <string name="category">Category:</string>
+
     <string-array name="test">
         <item>Test 1</item>
         <item>Test 2</item>
